--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -915,8 +915,8 @@ license_path =
 
 [feature_toggles]
 # enable features, separated by spaces
-enable =
-
+; enable = trimDefaults
+enable = 
 [date_formats]
 # For information on what formatting patterns that are supported https://momentjs.com/docs/#/displaying/
 
